Fix: Spacing for landuse area; Spacing for GHG emission (on-land) start/end year

--- a/luto/tools/report/data_tools/template_html/pages/land-use_area.css
+++ b/luto/tools/report/data_tools/template_html/pages/land-use_area.css
@@ -4,7 +4,7 @@ div.fig {
 }
 
 div.mat {
-    height: 500px;
+    margin-top: 80px;
     margin-bottom: 80px;
 }
 
